Corrigiendo error de imagen
Las imágenes no cargaban por error en la ruta

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ingeniería Informática</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <script src="https://kit.fontawesome.com/b25b47ad33.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
 </head>
 <body>
     <header> encabezados oficiales del tecnm</header>
@@ -26,7 +26,7 @@
                 <div id="contentItemsCarrusel">
                     <div class="itemCarrusel" id="item1">
                         <div class="tarjetaCarrusel" id="imagen1">
-                            <img src="/img/1.JPG">
+                            <img src="img/1.JPG">
                         </div>
                         <div class="flechasCarrusel">
                             <a href="#item3"><i><</i></a>
@@ -35,7 +35,7 @@
                     </div>
                     <div class="itemCarrusel" id="item2">
                         <div class="tarjetaCarrusel" id="imagen2">
-                            <img src="/img/2.JPG">
+                            <img src="img/2.JPG">
                         </div>
                         <div class="flechasCarrusel">
                             <a href="#item1"><i><</i></a>
@@ -44,7 +44,7 @@
                     </div>
                     <div class="itemCarrusel" id="item3">
                         <div class="tarjetaCarrusel" id="imagen3">
-                            <img src="/img/3.JPG">
+                            <img src="img/3.JPG">
                         </div>
                         <div class="flechasCarrusel">
                             <a href="#item2"><i><</i></a>
