--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         </div>
                         <div class="flechasCarrusel">
                             <a href="#item3"><i><</i></a>
-                            <a href="#item2"><i class="fa-regular fa-arrow-right"></i></a>
+                            <a href="#item2">><i class="fa-regular fa-arrow-right"></i></a>
                         </div>
                     </div>
                     <div class="itemCarrusel" id="item2">
