--- a/index.html
+++ b/index.html
@@ -52,15 +52,7 @@
                         </div>
                     </div>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid, 
-                    sed cupiditate molestias aperiam est architecto tempore velit, 
-                    nihil quas saepe provident? Voluptates ipsam ipsum eaque pariatur quia, 
-                    consequuntur, tenetur iste voluptas vero quo officiis recusandae animi odit? 
-                    Reiciendis tempore iure ipsam tempora ab autem libero ducimus, 
-                    eos alias neque temporibus doloremque dolore architecto debitis quidem dignissimos? 
-                    Aspernatur voluptates libero quae voluptatem ea doloribus aliquam ad dignissimos 
-                    tempore id sapiente omnis architecto iste odit, veritatis eaque porro ipsam amet, 
-                    delectus tempora.
+                <p>Esta es una pruebaaaaaa
                 </p>
             </article>
             <article id="tab2">
